<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_top_rounded_stop_travel"
    android:elevation="16dp">

    <ImageButton
        android:id="@+id/ib_close_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:src="@drawable/ic_close_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_stop_travel"
        style="@style/TextAppearance.App.SemiBold.Blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/stop_travel"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ib_close_bottom_sheet" />

    <TextView
        android:id="@+id/tv_structure_name"
        style="@style/TextAppearance.App.SemiBold.Blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_stop_travel"
        tools:text="Ospedale dell'Angelo, Mestre" />

    <TextView
        android:id="@+id/tv_instruction_message"
        style="@style/TextAppearance.App.BottomSheet.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="22dp"
        android:text="@string/stop_instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_structure_name" />

    <TextView
        android:id="@+id/tv_arrival_communication"
        style="@style/TextAppearance.App.BottomSheet.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="10dp"
        android:text="@string/arrival_communication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_instruction_message" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_stop_travel"
        style="@style/Widget.App.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="26dp"
        android:padding="16dp"
        android:text="@string/stop_travel"
        app:layout_constraintTop_toBottomOf="@id/tv_arrival_communication" />


</androidx.constraintlayout.widget.ConstraintLayout>